完善视频播放器，可播放https网址，但http非常卡顿，待优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_permission_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.ZhangCeDemos"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -25,9 +27,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".screen_shot.UseScreenShotActivity"/>
-        <activity android:name=".screen_shot.ScreenShotActivity"/>
-        <activity android:name=".videoplayonline.VideoPlayOnlineActivity"/>
+        <activity android:name=".screen_shot.UseScreenShotActivity" />
+        <activity android:name=".screen_shot.ScreenShotActivity" />
+        <activity android:name=".videoplayonline.VideoPlayOnlineActivity" />
     </application>
 
 </manifest>
