--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     // 调色板
     implementation 'androidx.palette:palette:1.0.0'
 
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
 }
