--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,8 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
 
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:x.x.x"
 }
