feature:svg与lottie动画demo cause: ChanDaoID: owner:zhangce

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".viewpager.MyViewPagerDemo" />
         <activity android:name=".shopping_cart.ShoppingCartActivity" />
         <activity android:name=".xiecheng.XieChengActivity" />
+        <activity android:name=".svg_demo.SvgDemoActivity" />
     </application>
 
 </manifest>
