--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation "com.airbnb.android:lottie:6.4.1"
 
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:x.x.x"
 }
