--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation files('libs/CSNPrinterSDK.jar')
+    implementation files('libs/simple-xml-2.7.1.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -52,6 +54,9 @@ dependencies {
     implementation "com.airbnb.android:lottie:6.4.1"
 
     implementation "com.github.lecho:hellocharts-library:1.5.8@aar"
+
+//    implementation 'me.yokeyword:indexablerecyclerview:1.3.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:x.x.x"
 }
