--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,17 @@
         <activity android:name=".xiecheng.XieChengActivity" />
         <activity android:name=".svg_demo.SvgDemoActivity" />
         <activity android:name=".charts.ChartsDemoActivity" />
+        <activity android:name=".upan_demo.UpanDemoActivity" />
+        <activity android:name=".select_city.SelectCity2Activity" />
+
+        <receiver android:name=".upan_demo.USBDiskReceiver">
+            <intent-filter android:priority="999" >
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.MEDIA_UNMOUNTED" />
+                <action android:name="android.intent.action.MEDIA_REMOVED" />
+                <data android:scheme="file" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
